# VoxelOps

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .uvignore  ARCHITECTURE.md  CHANGES_UV.md  DEVELOPMENT.md  LICENSE  MIGRATION_TO_UV.md  Makefile  README.md  README.rst  SUMMARY.md  UV_QUICKSTART.md  heudiconv_post_treatment.md  pyproject.toml
.github/workflows/: ci.yml
.output/doctrees/: environment.pickle  getting_started.doctree  index.doctree  workflows.doctree
.output/doctrees/source/: voxelops.runners.doctree  voxelops.schemas.doctree
.output/html/: .buildinfo  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js  tutorials.html  workflows.html
.output/html/source/: modules.html  voxelops.html  voxelops.runners.html  voxelops.schemas.html
docs/: conf.py  contributing.rst  getting_started.rst  index.rst  requirements.txt  tutorials.rst  validation.rst  workflows.rst
docs/_build/doctrees/: contributing.doctree  environment.pickle  index.doctree  tutorials.doctree
docs/_build/html/: .buildinfo  contributing.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html  workflows.html
docs/source/: voxelops.rst  voxelops.runners.rst  voxelops.schemas.rst  voxelops.utils.rst
examples/: brain_bank_integration.py  dicom_to_bids.py  force_skip_example.py  full_pipeline.py  qsiparc.py  qsiprep.py  qsirecon.py
examples/validation/: 01_validation_framework_intro.ipynb  02_heudiconv_validation.ipynb  02_qsiprep_validation.ipynb  03_custom_validation_rules.ipynb  DEBUG_validator_behavior.ipynb  README.md
notebooks/: 01_heudiconv_basics.ipynb  02_qsiprep_basics.ipynb  03_qsirecon_basics.ipynb  04_qsiparc_basics.ipynb  05_full_pipeline.ipynb  README.md  generate_atlas_dataset.ipynb
src/voxelops/: __init__.py  exceptions.py
src/voxelops/audit/: __init__.py  logger.py  records.py
src/voxelops/cli/: __init__.py  _common.py  _main.py  _parsers.py  freesurfer.py  heudiconv.py  qsiparc.py  qsiprep.py  qsirecon.py
src/voxelops/procedures/: __init__.py  orchestrator.py  result.py
tests/: conftest.py  test_exceptions.py  test_init.py  test_integration.py  test_runners.py  test_runners_base.py  test_runners_heudiconv.py  test_runners_qsiparc.py  test_runners_qsiprep.py  test_runners_qsirecon.py  test_schemas_heudiconv.py  test_schemas_qsiparc.py  test_schemas_qsiprep.py  test_schemas_qsirecon.py  test_utils_bids.py
tests/audit/: test_audit.py
tests/cli/: test_common.py  test_main.py  test_parsers.py  test_subcommands.py
tests/procedures/: __init__.py  test_procedures.py
tests/validation/: test_base.py  test_context.py  test_rules_common.py  test_validators_base.py  test_validators_procedures.py
(+62 files in other folders)
