[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxelops"
version = "0.2.0"
description = "Clean, simple neuroimaging pipeline automation for brain banks"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "YALab DevOps", email = "yalab.dev@gmail.com"},
]
keywords = ["neuroimaging", "brain-bank", "qsiprep", "qsirecon", "heudiconv", "docker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

# Minimal dependencies - no heavy frameworks!
dependencies = [
    "ipython>=8.12.3",
    "pandas>=2.0.3",
    "parcellate>=0.1.2",
    "pyyaml>=6.0.3",
    "templateflow>=24.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]
notebooks = [
    "jupyter>=1.0",
    "matplotlib>=3.5",
    "pandas>=1.3",
    "seaborn>=0.11",
]
config = [
    "tomli>=2.0; python_version<'3.11'",
    "pyyaml>=6.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx_rtd_theme>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/yalab-devops/VoxelOps"
Documentation = "https://github.com/yalab-devops/VoxelOps#readme"
Repository = "https://github.com/yalab-devops/VoxelOps"
Issues = "https://github.com/yalab-devops/VoxelOps/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/voxelops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=voxelops --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    "*.pyc",
    "*.ipynb",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
